# api/openapi.yaml
@@ -87,12 +87,16 @@ components:
       required:
         - name
         - email
+        - password
       properties:
         name:
           type: string
         email:
           type: string
           format: email
+        password:
+          type: string
+          minLength: 6
     CreateUserResponse:
       type: object
       properties:
